--- a/app/src/main/res/layout/fragment_city_weather.xml
+++ b/app/src/main/res/layout/fragment_city_weather.xml
@@ -2,6 +2,7 @@
 <android.support.constraint.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/constraint_city"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
@@ -45,4 +46,5 @@
         app:layout_constraintBottom_toBottomOf="@+id/weather_icon"
         app:layout_constraintStart_toEndOf="@+id/weather_icon"
         app:layout_constraintTop_toBottomOf="@+id/temperature" />
+
 </android.support.constraint.ConstraintLayout>
